compiler/tests/fixtures/invalid/semantics/reaction_missing_precast_role.viv
// Invalid: reaction fails to precast a precast role

reserved action ceremony:
    roles:
        @leader:
            as: initiator
        @guest:
            as: character, precast

action invite:
    roles:
        @host:
            as: initiator
    reactions:
        queue action ceremony:
            with partial:
                @leader: @host
